--- a/config/leds.yaml
+++ b/config/leds.yaml
@@ -245,3 +245,8 @@ lights:
         # type: grb
         number: 59
         default_on_color: f5f5f5
+    l_portal:
+        # type: grb
+        number: 60
+        default_on_color: f5f5f5
+
