--- a/modes/starwars_multiball/config/starwars_multiball.yaml
+++ b/modes/starwars_multiball/config/starwars_multiball.yaml
@@ -34,7 +34,7 @@ light_player:
 
     multiball_starwars_mball_started:
         l_droid_lock: off
-        l_tractor_beam: off
+        l_spinner: off
 
 
 #############################################################
