--- a/modes/high_score/config/high_score.yaml
+++ b/modes/high_score/config/high_score.yaml
@@ -6,148 +6,148 @@ high_score:
   categories: !!omap
   - score:
       - CHAMP
-  award_slide_display_time: 2.0s
+  # award_slide_display_time: 2.0s
   defaults:
     score:
-      - DOG: 200000
+      - RIF: 200000
 
-show_player:
-  high_score_enter_initials_started:
-    sh_knock3times:
-      loops: 0
+# show_player:
+#   high_score_enter_initials_started:
+#     sh_knock3times:
+#       loops: 0
 
-shows:
-  sh_knock3times:
-    - time: 0
-      coils:
-        c_knocker
-    - time: 200ms
-      coils:
-        c_knocker
-    - time: 400ms
-      coils:
-        c_knocker
+# shows:
+#   sh_knock3times:
+#     - time: 0
+#       coils:
+#         c_knocker
+#     - time: 200ms
+#       coils:
+#         c_knocker
+#     - time: 400ms
+#       coils:
+#         c_knocker
 
-slides:
-  _overwrite: True
+# slides:
+#   _overwrite: True
 
-  high_score_enter_initials:
-    - type: image
-      image: sw_bg
-      z: 2
+#   high_score_enter_initials:
+#     - type: image
+#       image: sw_bg
+#       z: 2
 
-    - type: text
-      font_size: 240
-      font_name: Ten_segment
-      text: P(player_num)
-      color: blue
-      x: 620
-      y: 68    
-      z: 3
-      anchor_x: right
-      anchor_y: bottom
+#     - type: text
+#       font_size: 240
+#       font_name: Ten_segment
+#       text: P(player_num)
+#       color: blue
+#       x: 620
+#       y: 68    
+#       z: 3
+#       anchor_x: right
+#       anchor_y: bottom
 
 
-    - type: text
-      x: 1230
-      y: 724    
-      font_size: 240
-      font_name: Ten_segment
-      anchor_x: right
-      anchor_y: bottom
-      text: (award)
-      color: blue
-      z: 3
+#     - type: text
+#       x: 1230
+#       y: 724    
+#       font_size: 240
+#       font_name: Ten_segment
+#       anchor_x: right
+#       anchor_y: bottom
+#       text: (award)
+#       color: blue
+#       z: 3
 
-    - type: text_input
-      key: high_score
-      char_list: "ABCDEFGHIJKLMNOPQRSTUVWXYZ_ "
-      font_name: Ten_segment
-      max_chars: 3
-      # dynamic_x: False
-      # dynamic_x_pad: 190
-      color: blue
-      x: 660
-      y: 68
-      font_size: 240
-      anchor_x: left
-      anchor_y: bottom
-      z: 4
-      animations:
-        show_slide:
-          - property: opacity
-            value: 0
-            duration: .5s
-          - property: opacity
-            value: 1
-            duration: .5s
-            repeat: True
+#     - type: text_input
+#       key: high_score
+#       char_list: "ABCDEFGHIJKLMNOPQRSTUVWXYZ_ "
+#       font_name: Ten_segment
+#       max_chars: 3
+#       # dynamic_x: False
+#       # dynamic_x_pad: 190
+#       color: blue
+#       x: 660
+#       y: 68
+#       font_size: 240
+#       anchor_x: left
+#       anchor_y: bottom
+#       z: 4
+#       animations:
+#         show_slide:
+#           - property: opacity
+#             value: 0
+#             duration: .5s
+#           - property: opacity
+#             value: 1
+#             duration: .5s
+#             repeat: True
 
-    - type: text
-      text: ""
-      key: high_score
-      font_size: 240  
-      font_name: Ten_segment  
-      anchor_x: left
-      anchor_y: bottom
-      x: 660
-      y: 68
-      color: blue
-      z: 3
+#     - type: text
+#       text: ""
+#       key: high_score
+#       font_size: 240  
+#       font_name: Ten_segment  
+#       anchor_x: left
+#       anchor_y: bottom
+#       x: 660
+#       y: 68
+#       color: blue
+#       z: 3
 
         
-  high_score_award_display:
-    - type: image
-      image: sw_bg
-      z: 2
+#   high_score_award_display:
+#     - type: image
+#       image: sw_bg
+#       z: 2
 
-    - type: text
-      text: (player_name)
-      font_size: 240
-      font_name: Ten_segment  
-      anchor_x: right
-      anchor_y: bottom    
-      x: 620
-      y: 84
-      z: 3
-      color: blue
-      animations:
-        show_slide:
-        - property: opacity
-          value: 1
-          duration: 0.08s
-        - property: opacity
-          value: 0
-          duration: 0.08s
-          repeat: true
+#     - type: text
+#       text: (player_name)
+#       font_size: 240
+#       font_name: Ten_segment  
+#       anchor_x: right
+#       anchor_y: bottom    
+#       x: 620
+#       y: 84
+#       z: 3
+#       color: blue
+#       animations:
+#         show_slide:
+#         - property: opacity
+#           value: 1
+#           duration: 0.08s
+#         - property: opacity
+#           value: 0
+#           duration: 0.08s
+#           repeat: true
 
-    - type: text
-      text: (value)
-      font_size: 240
-      font_name: Ten_segment  
-      anchor_x: right
-      anchor_y: bottom    
-      x: 1230
-      y: 84
-      z: 3
-      color: blue
-      animations:
-        show_slide:
-        - property: opacity
-          value: 1
-          duration: 0.08s
-        - property: opacity
-          value: 0
-          duration: 0.08s
-          repeat: true
+#     - type: text
+#       text: (value)
+#       font_size: 240
+#       font_name: Ten_segment  
+#       anchor_x: right
+#       anchor_y: bottom    
+#       x: 1230
+#       y: 84
+#       z: 3
+#       color: blue
+#       animations:
+#         show_slide:
+#         - property: opacity
+#           value: 1
+#           duration: 0.08s
+#         - property: opacity
+#           value: 0
+#           duration: 0.08s
+#           repeat: true
           
-    - type: text
-      x: 1230
-      y: 644
-      font_size: 240
-      font_name: Ten_segment
-      anchor_x: right
-      anchor_y: bottom
-      text: (award)
-      color: blue
-      z: 3
+#     - type: text
+#       x: 1230
+#       y: 644
+#       font_size: 240
+#       font_name: Ten_segment
+#       anchor_x: right
+#       anchor_y: bottom
+#       text: (award)
+#       color: blue
+#       z: 3
