--- a/data/machine_vars.yaml
+++ b/data/machine_vars.yaml
@@ -5,4 +5,8 @@ master_volume:
 player1_score:
   expire: null
   expire_secs: null
-  value: 28800
+  value: 48700
+player2_score:
+  expire: null
+  expire_secs: null
+  value: 65500
