--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ SW Database.xlsx
 data/audits.yaml
 data/audits.yaml
 data/machine_vars.yaml
+data/audits.yaml
+data/machine_vars.yaml
+data/machine_vars.yaml
