--- a/config/displays.yaml
+++ b/config/displays.yaml
@@ -31,9 +31,6 @@ displays:
   bipdisplay:
     width: 50  
     height: 75
-  godisplay:
-    width: 100
-    height: 90
   backglass:
     width: 1080
     height: 1219
@@ -96,16 +93,6 @@ slides:
         anchor_y: bottom
         source_display: bipdisplay
 
-
-      - type: display               # game over display
-        width: 100
-        height: 90
-        x: 782
-        y: 1100
-        anchor_x: left
-        anchor_y: bottom
-        source_display: godisplay
-
       - type: display               # background
         width: 1080
         height: 1219
@@ -127,73 +114,6 @@ slides:
         image: sw_bg_lit
         z: 5
 
-  gameover_widget:
-    background_color: black
-    widgets:
-      - type: text
-        text: "GAME\nOVER"
-        color: 30a8c0
-        font_name: deathstar
-        font_size: 30
-        animations:
-          show_slide:
-            - property: opacity
-              value: 1
-              duration: .15s
-              easing: in_out_quad
-            - property: y
-              value: 0
-              relative: True
-              duration: .75s
-            - property: opacity
-              value: 0
-              duration: .25s
-              easing: in_out_quad
-            - property: y
-              value: 0
-              relative: True
-              duration: .15s
-            - property: opacity
-              value: 1
-              duration: .15s
-              easing: in_out_quad
-            - property: y
-              value: 0
-              relative: True
-              duration: 1.25s
-            - property: opacity
-              value: 0
-              duration: .25s
-              easing: in_out_quad
-            - property: y
-              value: 0
-              relative: True
-              duration: .35s
-            - property: opacity
-              value: 1
-              duration: .15s
-              easing: in_out_quad
-            - property: y
-              value: 0
-              relative: True
-              duration: .5s
-            - property: opacity
-              value: 0
-              duration: .15s
-              easing: in_out_quad
-            - property: y
-              value: 0
-              relative: True
-              duration: .15s
-              repeat: true
-  
-  
-  gameover_blank: 
-    background_color: black
-    widgets: []
-
-
-
   uppersegment:
     widgets:
       - type: segment_display_emulator
@@ -205,7 +125,7 @@ slides:
         character_spacing: 11
         padding: 12
         segment_width: 0.12
-        segment_off_color: 012030
+        segment_off_color: "012030"
         segment_on_color: 00acf0
         comma_enabled: true
         width: 400
